# learning-cmake

curl/src/: CMakeLists.txt
hello-world-clear/: CMakeLists.txt
hello-world-clear/src/: CMakeLists.txt
hello-world-lib/src/: CMakeLists.txt
hello-world-shared/src/: CMakeLists.txt
